--- a/rro_overlays/TetheringOverlay/AndroidManifest.xml
+++ b/rro_overlays/TetheringOverlay/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.networkstack.tethering.realme_mt6785"
+    package="com.android.networkstack.tethering.RMX2001"
     android:versionCode="1"
     android:versionName="1.0">
     <application android:hasCode="false" />
